<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">J</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebookId">624622577604521</string>
    <string name="version">Version 1.0</string>
    
    <string name="img_log">Imagen de login</string>
    <string name="img_detalle">Imagen de lugar</string>
    <string name="hint">Lugar</string>
    <string name="dfil">Selección</string>
    <string name="aceptar">Submit</string>
    <string name="cancelar">Cancelar</string>
    <string name="search">Búsqueda</string>

    <string-array name="drawable">
        <item>Mapa</item>
        <item>Popular</item>
        <item>Categories</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string-array name="categorias">
        <item>Antros y Bares</item>
        <item>Comida</item>
        <item>Cafeteria</item>
        <item>Hotel</item>
        <item>Cultural</item>
        <item>Tienda</item>
        <item>Cuidado Personal</item>
    </string-array>
    <string-array name="tipos">
        <item>Bisexual</item>
        <item>Gay</item>
        <item>Lesbico</item>
        <item>Transexual</item>
    </string-array>
    <string-array name="ajustes">
        <item>Notification Settings</item>
        <item>Social Networks</item>
        <item>About</item>
        <item>Privacy Policy</item>
        <item>Logout</item>
    </string-array>

    <string name="filtrar">Filter</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_search">Buscar</string>
    <string name="title_activity_search_result">SearchResult</string>

    <string name="btn_log">Iniciar sesión</string>
    <string name="btn_reg">Crear cuenta</string>
    <string name="btn_continue">Omitir este paso</string>

    
    <string name="btn_log">Log In</string>
    <string name="btn_reg">Sign Up</string>
    <string name="btn_continue">Continue to App</string>
    <string name="btn_face">Login with Facebook</string>
    <string name="btn_comment">Comment</string>
    <string name="btn_forget">Forgot password?</string>
    <string name="btn_comment">Add Comment</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more_comments">More Comments</string>
    <string name="btn_settings">Settings</string>
    
    <string name="hint_user">User</string>
    <string name="hint_pass">Password</string>
    <string name="hint_mail">Email</string>
    <string name="hint_confirm">Confirm Password</string>
    
    <string name="alert_wait">Wait a moment</string>
    <string name="alert_no_login">You need to sign in or register</string>
    <string name="alert_email">An email has been sent to your address</string>
    <string name="alert_no_email">We don\'t have that email</string>
    <string name="alert_logout">You will be logged out</string>
    <string name="alert_gps">GPS Settings</string>
    <string name="alert_txtgps">To improve functionality activate GPS</string>

    <string name="txt_linked">Unlink Facebook</string>
    <string name="txt_unlink">Link with Facebook</string>
    <string name="txt_forgot_pass">Please enter your email address to recover your account</string>
    <string name="txt_mail">Choose an Email client:</string>
    
    <string name="title_activity_detalles">DetallesActivity</string>
    <string name="masinfo">More Information</string>
    
    <string name="about">About</string>
    <string name="txt_comments">Comments</string>
    <string name="txt_no_comments">No comments, be the first to rate this place</string>
    <string name="empty_notif">You don\'t have notifications</string>
    <string name="btn_notif">More</string>

</resources>
